k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketremaster-core
  labels:
    app.kubernetes.io/part-of: ticketremaster
    ticketremaster.io/plane: core
---
apiVersion: v1
kind: Namespace
metadata:
  name: ticketremaster-edge
  labels:
    app.kubernetes.io/part-of: ticketremaster
    ticketremaster.io/plane: edge
---
apiVersion: v1
kind: Namespace
metadata:
  name: ticketremaster-data
  labels:
    app.kubernetes.io/part-of: ticketremaster
    ticketremaster.io/plane: data
